Added commented out SDK 2.2.0 local reference

--- a/greenlight_plugin/android/src/main/res/values/styles.xml
+++ b/greenlight_plugin/android/src/main/res/values/styles.xml
@@ -18,4 +18,7 @@
         <item name="android:background">@android:color/white</item>
     </style>
 
+    <!-- <style name="P3" parent="AlkamiGreenlightTheme">
+        <item name="android:background">@android:color/white</item>
+    </style> -->
 </resources>
